syntax = "proto3";

package ticket_base;

option go_package = "campus_acticity_ticketing_system/ticket_base/internal/proto";

message Scope {
    int64 id = 1;
    string name = 2;
    bool status = 3;
}

service ScopeService {
    rpc Create(Scope) returns (Scope) {}
    rpc Update(Scope) returns (Scope) {}
    rpc Delete(IdRequest) returns (EmptyResponse) {}
    rpc GetById(IdRequest) returns (Scope) {}
    rpc List(ListRequest) returns (ScopeListResponse) {}
}

message IdRequest {
    int64 id = 1;
}

message EmptyResponse {}

message ListRequest {
    int32 page = 1;
    int32 page_size = 2;
}

message ScopeListResponse {
    repeated Scope items = 1;
    int32 total = 2;
}